--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -57,7 +57,7 @@
 }
 
 .filter-item {
-    color: #050505;
+    color: rgba(5, 5, 5, 0.5);
     border: 1px solid #05050533;
     border-radius: 15px;
     gap: 40px;
@@ -104,6 +104,7 @@
     );
 }
 
+
 /* Фільтри */
 .filters {
     width: 335px;
@@ -118,7 +119,12 @@
 }
 
 .filter-input {
-    max-width: 335px;
+    /* max-width: 335px; */
+    /* font-family: Inter;
+    font-size: 16px; 
+    font-weight: 500;
+    line-height: 20px; */
+    color: rgba(5, 5, 5, 0.5);
 }
 
 .time {
@@ -143,8 +149,13 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 1.17;
+    color: rgba(5, 5, 5, 0.5);
+    margin-top: 14px;
 }
 
+#content-filters {
+    display: grid;
+}
 .reset-filters {
     border: none;
     margin: 0;
@@ -299,7 +310,8 @@
 .main-see-recipe {
     position: absolute;
 
-    left: 132px;
+    left: 210px;
+    top: 275px;
     /* top: 288px;
     width: 89px; */
     background-color: #9bb537;
@@ -334,10 +346,12 @@
     filter: blur(0px);
     opacity: 60%;
     border-radius: 8px;
+    width: 320px;
+    height: 320px;
 }
 .item-cards .card-img {
-    width: 335px;
-    height: 335px;
+    width: 320px;
+    height: 320px;
     border-radius: 8px;
 }
 
@@ -358,6 +372,21 @@
 .rating-number-recipe {
     color: rgba(248, 248, 248, 1);
 }
+
+/* MIN 320*************************************** */
+@media screen and (min-width: 375px) {
+    #content {
+        width: 320px;
+    }
+        .filter-input {
+            width: 320px;
+        }
+    
+        .list-item {
+            width: 320px;
+        }
+                
+    }    
 
 /* MIN 375**************************************************************** */
 @media screen and (min-width: 375px) {
@@ -394,6 +423,7 @@
         align-items: center;
         justify-content: center;
         left: 230px;
+        top: 288px;
     }
 }
 
@@ -497,10 +527,15 @@
 .reset-filters {
     display: flex;
     justify-content: flex-end;
-    margin-right: 145px;
+    /* margin-right: 145px; */
     position: inherit;
     margin-bottom: 14px;
 }
+
+        .main-see-recipe  {
+            top: 217px;
+            left: 135px;
+        }
 /* Пагінація******************************************************** */
 
     /* MIN 1280******************************************************/
@@ -515,6 +550,11 @@
             display: flex;
             gap: 16px;
         }
+
+        .form-filters {
+            display: contents;
+        }
+
         .main-div {
             gap: 64px;
         }
@@ -541,12 +581,14 @@
         }
 
         .main-see-recipe {
-            right: 16px;
+            /* right: 16px; */
+            top: 240px;
+            left: 141px;
         }
 
-    .reset-filters {
+    /* .reset-filters {
         margin-right: 30px;
-    }
+    } */
     .shadow-on-img::before {
         width: 250px;
         height: 289px;
