--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -113,10 +113,6 @@
     gap: 14px;
 }
 
-.filter-area {
-    display: flex;
-    flex-direction: column;
-}
 
 .filter-input {
     /* max-width: 335px; */
@@ -151,6 +147,7 @@
     line-height: 1.17;
     color: rgba(5, 5, 5, 0.5);
     margin-top: 14px;
+    display: flex;
 }
 
 #content-filters {
@@ -170,7 +167,7 @@
     display: flex;
     gap: 4px;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     margin-bottom: 14px;
 }
 .reset-filters::before {
@@ -187,18 +184,51 @@
     margin-bottom: 40px;
 }
 
+/* .filter-area {
+    display: flex;
+    flex-direction: column;
+} */
+
+
 /* Пагінація****************************************************************** */
 .pagination {
     display: flex;
     margin: 0 auto;
+    gap: 4px;
+    justify-content: center;
+}
+
+.icon-pag-btn {
+    width: 20px;
+        height: 20px;
+        flex-shrink: 0;
+        margin-left: 6px;
+        display: flex;
+        margin: -7px;   
+}
+.pag-btn-dark {
+    display: flex;
+    margin: -7px;
+}
+.pag-transform-dark {
+    transform: rotate(180deg);
+}
+.pag-transform-green {
+    fill: #050505;
+}
+.transform-dark-pag {
+    transform: rotate(180deg);
 }
 
 .main-pag-btn {
+    font-family: Inter;
+        font-weight: 600;
+        font-size: 18px;
+        background-color: transparent;
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    margin-right: 8px;
-    font-family: inter;
+    margin-right: 4px;
     border-color: #0505054d;
     transition:
         border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -210,14 +240,25 @@
 .main-pag-btn[disabled] {
     color: #ffffff33;
     background-color: #050505;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ 
 }
+
 
 .main-pag-btn.main-pag-btn-green {
     border: 1px solid #9bb537;
     border-radius: 50%;
     background-color: #9bb537;
+    /* display: flex; */
 }
-
+/* .main-pag-btn {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+} */
 .main-pag-btn:hover:not([disabled]) {
     border-color: #ff00004d;
     border-radius: 50%;
@@ -227,19 +268,19 @@
     height: 44px;
     margin-right: 8px;
     transition:
-        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-pag-btn.active:hover {
     border-radius: 50%;
-    background-color: red;
+    /* background-color: red; */
     color: rgb(0, 0, 0);
     width: 44px;
     height: 44px;
-    margin-right: 8px;
+    /* margin-right: 8px; */
     transition:
         border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
@@ -248,12 +289,14 @@
 }
 
 .main-pag-btn.active {
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 18px;
     border-radius: 50%;
     background-color: #9bb537;
-    color: rgb(253, 253, 253);
+    color: rgba(5, 5, 5, 1);
     width: 44px;
     height: 44px;
-    margin-right: 8px;
     transition:
         border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
         color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
@@ -264,16 +307,15 @@
 .add-fav-btn {
     position: absolute;
     z-index: 1000;
-    /* background-color: red; */
     color: white;
     width: 22px;
     height: 22px;
     top: 16px;
-    right: 16px;
     background-color: transparent;
     border: none;
     padding: 0;
     z-index: 2;
+    right: 32px;
 }
 .heard-icon {
     width: 22px;
@@ -289,7 +331,6 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 1.29;
-    /* height: 18px; */
     z-index: 2;
 }
 
@@ -312,8 +353,6 @@
 
     left: 210px;
     top: 275px;
-    /* top: 288px;
-    width: 89px; */
     background-color: #9bb537;
     border: none;
     border-radius: 8px;
@@ -330,11 +369,6 @@
     color: #f8f8f8;
 }
 
-/* .shadow-on-img {
-    position: relative;
-    width: 335px;
-    height: 335px;
-} */
 
 .shadow-on-img::before {
     content: '';
@@ -366,7 +400,7 @@
 .rating-recipe {
     display: flex;
     position: absolute;
-    bottom: 16px;
+    bottom: 32px;
     left: 16px;
 }
 .rating-number-recipe {
@@ -378,6 +412,9 @@
     #content {
         width: 320px;
     }
+        #content-filters {
+            width: 320px;
+        }
         .filter-input {
             width: 320px;
         }
@@ -385,7 +422,26 @@
         .list-item {
             width: 320px;
         }
+
+     .pagination {
+        min-width: 320px;
+        margin: 0;
+    }
+
+    .main-pag-btn {
+        margin: 0;
+                }
+        .main-pag-btn[disabled]:not(:first-child) {
+            margin-right: 0;
+        }
+                .main-pag-btn.main-pag-btn-green:not(:first-child) {
+                    margin-left: 0px;
+                }
                 
+                .form-filters {
+                    display: flex;
+                        flex-wrap: wrap;
+                }
     }    
 
 /* MIN 375**************************************************************** */
@@ -393,7 +449,9 @@
     #content {
         width: 335px;
     }
-
+        #content-filters {
+            width: 335px;
+        }
     .filter-input {
         width: 335px;
     }
@@ -425,6 +483,34 @@
         left: 230px;
         top: 288px;
     }
+
+        .main-pag-btn[disabled]:not(:first-child) {
+            margin-right: 10px;
+        }
+    
+        .main-pag-btn.main-pag-btn-green:not(:first-child) {
+            margin-left: 10px;
+            
+        }
+                .main-pag-btn.main-pag-btn-green {
+                    display: flex;
+                        justify-content: center;
+                        align-items: center;
+                }
+                
+                .main-pag-btn.active {
+                    margin-right: 8px;
+                }
+                  .add-fav-btn {
+                    right: 16px;
+                  }
+    
+        .rating-recipe {
+            bottom: 16px;
+        }
+               .area {
+                margin-left: 14px;
+               }
 }
 
 /* MIN 768******************************************************* */
@@ -433,6 +519,9 @@
     #content {
         width: 496px;
     }
+        #content-filters {
+            width: 496px;
+        }
     .filters {
         width: 419px;
     }
@@ -479,6 +568,7 @@
     /* Фільтри */
     .filter-input {
         width: 278px;
+        margin-right: 16px;
     }
 
     .time {
@@ -487,6 +577,7 @@
 
     .area {
         width: 141px;
+        margin-right: 16px;
     }
     .filters {
         gap: 16px;
@@ -598,4 +689,14 @@
         min-width: 250px;
         height: 288px;
     }
-}}
+    .pagination {
+        justify-content: center;
+    }
+        .filter-input {
+            margin: 0;
+        }
+                .area {
+                    margin: 0;
+                }
+}
+}
