--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     padding-bottom: 42px;
     padding-top: 92px;
+    justify-content: center;
 }
 .hero-block {
     margin-right: auto;
@@ -50,10 +51,10 @@
 .hero-btn:hover,
 .hero-btn:focus {
     background: var(--primary-brend);
-    color: var(--primary-bg-color);
+    color: var(--primary-btn-color);
 }
 
-.hero-text {
+.hero-wrap {
     width: 335px;
     margin-bottom: 28px;
 }
@@ -177,7 +178,7 @@
         margin-right: 0;
         margin-left: 0;
     }
-    .hero-text {
+    .hero-wrap {
         margin-bottom: 32px;
     }
     .hero-title {
@@ -246,17 +247,17 @@
 }
 /* ======================== min-1200px ====================== */
 @media screen and (min-width: 1200px) {
-    #hero-section {
+    /* #hero-section {
         display: flex;
         justify-content: center;
-    }
+    } */
 
     .hero-container {
         max-width: 1400px;
-        padding-left: 100px;
         padding-bottom: 100px;
         justify-content: space-between;
         flex-direction: row;
+        padding-left: 100px;
         flex-wrap: nowrap;
         gap: 32px;
     }
@@ -265,7 +266,7 @@
         display: flex;
         flex-direction: column;
     }
-    .hero-text {
+    .hero-wrap {
         width: 446px;
     }
     .swiper-container {
